[package]
name = "proxy-with-benefits"
version = "0.1.0"
edition = "2024"

[dependencies]
# support
async-trait = "0.1.78"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# application
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

[dev-dependencies]
wiremock = "0.6.0"
