[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "target-http"
path = "src/bin/target-http.rs"

[dependencies]
# support
async-trait = "0.1.78"
bytes = "1.10.1"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
http-body-util = "0.1"
lazy_static = "1.4.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.58"
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# application
#hyper = { version = "0.14.25", features = ["full"] }
#tokio = { version = "1.26.0", features = ["full"] }
#tower = { version = "0.4", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }

[dev-dependencies]
wiremock = "0.6.5"
